--- a/package.json
+++ b/package.json
@@ -20,16 +20,10 @@
     "@mantine/modals": "^7.15.2",
     "@mantine/notifications": "^7.15.2",
     "@mantine/nprogress": "^7.15.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.15.0",
-    "tailwindcss-animate": "^1.0.7"
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -45,7 +39,6 @@
     "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
     "vite": "^6.0.3"
